@@ -82,11 +82,6 @@ void parity_game::solve(region_t (&w)[2], strategy_t (&s)[2]) const
   solve_rec(states_, m, w, s);
 }
 
-bool parity_game::solve_qp() const
-{
-  return reachability_game(*this).is_reachable();
-}
-
 parity_game::strategy_t
 parity_game::attractor(const region_t& subgame, region_t& set,
                        unsigned max_parity, int p, bool attr_max) const
@@ -221,168 +216,6 @@ void parity_game::solve_rec(region_t& subgame, unsigned max_parity,
   s[!p].insert(s1[!p].begin(), s1[!p].end());
 
   subgame.insert(w0[!p].begin(), w0[!p].end());
-}
-
-int reachability_state::compare(const state* other) const
-{
-  auto o = down_cast<const reachability_state*>(other);
-  assert(o);
-  if (num_ != o->num())
-    return num_ - o->num();
-  if (b_ < o->b())
-    return -1;
-  if (b_ > o->b())
-    return 1;
-  return 0;
-}
-
-bool reachability_state::operator<(const reachability_state& o) const
-{
-  // Heuristic to process nodes with a higher chance of leading to a target
-  // node first.
-  assert(b_.size() == o.b().size());
-  for (unsigned i = b_.size(); i > 0; --i)
-    if (b_[i - 1] != o.b()[i - 1])
-      return b_[i - 1] > o.b()[i - 1];
-  return num_ < o.num();
-}
-
-
-
-const reachability_state* reachability_game_succ_iterator::dst() const
-{
-  // NB: colors are indexed at 1 in Calude et al.'s paper and at 0 in spot
-  // All acceptance sets are therefore incremented (which is already done by
-  // max_set), so that 0 can be kept as a special value indicating that no
-  // i-sequence is tracked at this index. Hence the parity switch in the
-  // following implementation, compared to the paper.
-  std::vector<unsigned> b = state_.b();
-  unsigned a = it_->acc.max_set();
-  assert(a);
-  unsigned i = -1U;
-  bool all_even = a % 2 == 0;
-  for (unsigned j = 0; j < b.size(); ++j)
-    {
-      if ((b[j] % 2 == 1 || b[j] == 0) && all_even)
-        i = j;
-      else if (b[j] > 0 && a > b[j])
-        i = j;
-      all_even = all_even && b[j] > 0 && b[j] % 2 == 0;
-    }
-  if (i != -1U)
-    {
-      b[i] = a;
-      for (unsigned j = 0; j < i; ++j)
-        b[j] = 0;
-    }
-  return new reachability_state(it_->dst, b, !state_.anke());
-}
-
-
-
-const reachability_state* reachability_game::get_init_state() const
-{
-  // b[ceil(log(n + 1))] != 0 implies there is an i-sequence of length
-  // 2^(ceil(log(n + 1))) >= 2^log(n + 1) = n + 1, so it has to contain a
-  // cycle.
-  unsigned i = std::ceil(std::log2(pg_.num_states() + 1));
-  return new reachability_state(pg_.get_init_state_number(),
-                                std::vector<unsigned>(i + 1),
-                                false);
-}
-
-reachability_game_succ_iterator*
-reachability_game::succ_iter(const state* s) const
-{
-  auto state = down_cast<const reachability_state*>(s);
-  return new reachability_game_succ_iterator(pg_, *state);
-}
-
-std::string reachability_game::format_state(const state* s) const
-{
-  auto state = down_cast<const reachability_state*>(s);
-  std::ostringstream fmt;
-  bool first = true;
-  fmt << state->num() << ", ";
-  fmt << '[';
-  for (unsigned b : state->b())
-    {
-      if (!first)
-        fmt << ',';
-      else
-        first = false;
-      fmt << b;
-    }
-  fmt << ']';
-  return fmt.str();
-}
-
-bool reachability_game::is_reachable()
-{
-  std::set<spot::reachability_state> todo{*init_state_};
-  while (!todo.empty())
-    {
-      spot::reachability_state v = *todo.begin();
-      todo.erase(todo.begin());
-
-      std::vector<spot::const_reachability_state_ptr> succs;
-      spot::reachability_game_succ_iterator* it = succ_iter(&v);
-      for (it->first(); !it->done(); it->next())
-        succs.push_back(spot::const_reachability_state_ptr(it->dst()));
-
-      if (is_target(v))
-        {
-          c_[v] = 1;
-          if (mark(v))
-            return true;
-          continue;
-        }
-      else if (v.anke())
-        c_[v] = 1;
-      else
-        c_[v] = succs.size();
-      for (auto succ: succs)
-        {
-          if (parents_[*succ].empty())
-            {
-              if (*succ != *init_state_)
-                {
-                  todo.insert(*succ);
-                  parents_[*succ] = { v };
-                  c_[*succ] = -1U;
-                }
-            }
-          else
-            {
-              parents_[*succ].push_back(v);
-              if (c_[*succ] == 0 && mark(v))
-                return true;
-            }
-        }
-    }
-  return false;
-}
-
-bool reachability_game::mark(const spot::reachability_state& s)
-{
-  if (c_[s] > 0)
-    {
-      --c_[s];
-      if (c_[s] == 0)
-        {
-          if (s == *init_state_)
-            return true;
-          for (auto& u: parents_[s])
-            if (mark(u))
-              return true;
-        }
-    }
-  return false;
-}
-
-bool reachability_game::is_target(const reachability_state& v)
-{
-  return v.b().back();
 }
 
 }
